force-app/main/default/objects/sked__Account_Tag__c/sked__Account_Tag__c.object-meta.xml
<CustomObject>
    <label>Account Tag</label>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>AT</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>