force-app/main/default/objects/sked__Account_Tag__c/fields/sked__Account__c.field-meta.xml
<CustomField>
    <fullName>sked__Account__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Tags</relationshipLabel>
    <relationshipName>Account_Tags</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>