force-app/main/default/objects/sked__Account_Tag__c/fields/sked__Tag__c.field-meta.xml
<CustomField>
    <fullName>sked__Tag__c</fullName>
    <label>Tag</label>
    <referenceTo>sked__Tag__c</referenceTo>
    <relationshipLabel>Account Tags</relationshipLabel>
    <relationshipName>Account_Tags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>