force-app/main/default/objects/sked__Account_Tag__c/validationRules/Quantity_mutex_not_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_mutex_not_required</fullName>
    <active>true</active>
    <description>An Account tag must have minimum quantity if it&#39;s marked as not &#39;required&#39;</description>
    <errorConditionFormula>AND(ISNULL(sked_Minimum_Quantity__c), NOT(sked__Required__c))</errorConditionFormula>
    <errorMessage>An Account tag must have minimum quantity if it&#39;s marked as not &#39;required&#39;</errorMessage>
</ValidationRule>