force-app/main/default/objects/sked__Account_Tag__c/validationRules/Quantity_mutex_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_mutex_required</fullName>
    <active>true</active>
    <description>An Account tag cannot have minimum quantity if it&#39;s marked &#39;required&#39;</description>
    <errorConditionFormula>AND( NOT(ISNULL(sked_Minimum_Quantity__c)), sked__Required__c )</errorConditionFormula>
    <errorMessage>An Account tag cannot have minimum quantity if it&#39;s marked &#39;required&#39;</errorMessage>
</ValidationRule>