force-app/main/default/objects/sked__Account_Tag__c/validationRules/sked__Weighting_mutex_required.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__Weighting_mutex_required</fullName>
    <active>false</active>
    <description>An Account tag cannot have a weighting if it&#39;s marked &#39;required&#39;</description>
    <errorConditionFormula>AND( NOT(ISNULL(sked__Weighting__c)), sked__Required__c )</errorConditionFormula>
    <errorDisplayField>sked__Weighting__c</errorDisplayField>
    <errorMessage>An Account tag cannot have a weighting if it&#39;s marked &#39;required&#39;</errorMessage>
</ValidationRule>